# genro-daemon

./: .gitignore  README.md  gnrdaemon.py  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  benchmarking.md  benchmarks-20240401.ods  environment-variables.md  grafana-dashboard.json  grafana-dashboard.md  security.md
src/genro_daemon/: __init__.py  ars.py  client.py  codec.py  exceptions.py  handler.py  metrics.py  processes.py  service.py  services.py  sitedaemon.py  siteregister.py  siteregister_base.py  siteregister_client.py  siteregister_registers.py  utils.py
src/genro_daemon/storage/: __init__.py  base.py  memory.py  redis.py
tests/: conftest.py  test_ars.py  test_client.py  test_codec.py  test_exceptions.py  test_handler.py  test_integration.py  test_siteregister.py  test_storage.py  test_utils.py
utils/: gnrdaemonstress.py
